[package]
name = "medicallib"
version = "0.1.0"
edition = "2021"
authors = ["MedicalLib Team"]
description = "A comprehensive medical simulation library for modeling human physiological systems"
license = "MIT"
repository = "https://github.com/matterleast/medicallib"

[lib]
name = "medicallib"
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = "0.8"

[dev-dependencies]

[[example]]
name = "simulation"
path = "examples/simulation.rs"

[[example]]
name = "stemi_simulation"
path = "examples/stemi_simulation.rs"

[[example]]
name = "multi_organ_failure"
path = "examples/multi_organ_failure.rs"

[[example]]
name = "debug_stenosis"
path = "examples/debug_stenosis.rs"

[[example]]
name = "test_troponin"
path = "examples/test_troponin.rs"
